# mcp-k8s-observability-argocd-server

./: .coderabbit.yaml  .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  kind-config.yaml  pyproject.toml  review_senior_dev_20260205.md  session_review_fixes_merge_20260205_185708.md  session_senior_review_fixes_20260205_140951.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: SECURITY.md  TOOLS.md
examples/: README.md  claude-desktop-basic.json  claude-desktop-docker.json  claude-desktop-full-access.json  claude-desktop-local-dev.json  claude-desktop-multi-env.json  claude-desktop-write-enabled.json
scripts/: setup-test-cluster.sh
src/argocd_mcp/: __init__.py  config.py  server.py
src/argocd_mcp/resources/: __init__.py  applications.py
src/argocd_mcp/tools/: __init__.py  _safety.py  destructive.py  params.py  read.py  write.py
src/argocd_mcp/utils/: __init__.py  client.py  logging.py  safety.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py
tests/integration/: __init__.py  conftest.py  test_argocd_client.py  test_destructive_tools.py
tests/unit/: __init__.py  test_client.py  test_config.py  test_logging.py  test_safety.py  test_server.py  test_server_startup.py
